--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -6397,6 +6397,9 @@ Second Chronopic to platforms.</property>
                                                         <child>
                                                           <placeholder/>
                                                         </child>
+                                                        <child>
+                                                          <placeholder/>
+                                                        </child>
                                                       </widget>
                                                       <packing>
                                                         <property name="expand">True</property>
@@ -6983,6 +6986,9 @@ Second Chronopic to platforms.</property>
                                                             <property name="right_attach">2</property>
                                                             <property name="y_options">GTK_FILL</property>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
@@ -7755,6 +7761,9 @@ Second Chronopic to platforms.</property>
                                                             <child>
                                                             <placeholder/>
                                                             </child>
+                                                            <child>
+                                                            <placeholder/>
+                                                            </child>
                                                             </widget>
                                                             <packing>
                                                             <property name="position">2</property>
@@ -8236,6 +8245,9 @@ Second Chronopic to platforms.</property>
                                                             <property name="x_options">GTK_FILL</property>
                                                             <property name="y_options">GTK_FILL</property>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
@@ -13819,8 +13831,6 @@ on current Chronojump version.</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="tooltip" translatable="yes">Speed</property>
                                                             <property name="label" translatable="yes">v</property>
-                                                            <property name="ellipsize">end</property>
-                                                            <property name="max_width_chars">6</property>
                                                             </widget>
                                                             </child>
                                                             </widget>
@@ -13842,8 +13852,6 @@ on current Chronojump version.</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="tooltip" translatable="yes">Acceleration</property>
                                                             <property name="label" translatable="yes">a</property>
-                                                            <property name="ellipsize">end</property>
-                                                            <property name="max_width_chars">6</property>
                                                             </widget>
                                                             </child>
                                                             </widget>
@@ -13865,8 +13873,6 @@ on current Chronojump version.</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="tooltip" translatable="yes">Force</property>
                                                             <property name="label" translatable="yes">F</property>
-                                                            <property name="ellipsize">end</property>
-                                                            <property name="max_width_chars">6</property>
                                                             </widget>
                                                             </child>
                                                             </widget>
@@ -13889,8 +13895,6 @@ on current Chronojump version.</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="tooltip" translatable="yes">Power</property>
                                                             <property name="label" translatable="yes">P</property>
-                                                            <property name="ellipsize">end</property>
-                                                            <property name="max_width_chars">6</property>
                                                             </widget>
                                                             </child>
                                                             </widget>
@@ -17496,6 +17500,9 @@ by you</property>
                         <child>
                           <placeholder/>
                         </child>
+                        <child>
+                          <placeholder/>
+                        </child>
                       </widget>
                     </child>
                   </widget>
@@ -17885,6 +17892,9 @@ by you</property>
                             <property name="x_options">GTK_FILL</property>
                             <property name="y_options"/>
                           </packing>
+                        </child>
+                        <child>
+                          <placeholder/>
                         </child>
                         <child>
                           <placeholder/>
@@ -18679,6 +18689,12 @@ by you</property>
                 <property name="x_options">GTK_FILL</property>
                 <property name="y_options"/>
               </packing>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
             </child>
             <child>
               <placeholder/>
@@ -25471,6 +25487,24 @@ options</property>
                     <child>
                       <placeholder/>
                     </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
                   </widget>
                 </child>
               </widget>
@@ -26456,6 +26490,9 @@ options</property>
                                 <child>
                                   <placeholder/>
                                 </child>
+                                <child>
+                                  <placeholder/>
+                                </child>
                               </widget>
                             </child>
                           </widget>
@@ -26901,6 +26938,9 @@ options</property>
                             <property name="top_attach">1</property>
                             <property name="bottom_attach">2</property>
                           </packing>
+                        </child>
+                        <child>
+                          <placeholder/>
                         </child>
                         <child>
                           <placeholder/>
@@ -28707,6 +28747,9 @@ show elevation as:</property>
                         <child>
                           <placeholder/>
                         </child>
+                        <child>
+                          <placeholder/>
+                        </child>
                       </widget>
                       <packing>
                         <property name="left_attach">2</property>
@@ -28733,6 +28776,9 @@ show elevation as:</property>
                         <property name="x_options">GTK_FILL</property>
                         <property name="y_options"/>
                       </packing>
+                    </child>
+                    <child>
+                      <placeholder/>
                     </child>
                     <child>
                       <placeholder/>
@@ -28853,6 +28899,9 @@ show elevation as:</property>
                         <property name="x_options">GTK_FILL</property>
                         <property name="y_options">GTK_FILL</property>
                       </packing>
+                    </child>
+                    <child>
+                      <placeholder/>
                     </child>
                     <child>
                       <placeholder/>
